# Alpha-Quant-Trading-Bot

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  EXNESS_SETUP_GUIDE.md  Procfile  docker-compose.yml  render.yaml  requirements.txt  run_platform.bat  run_verification.bat  test_full_lifecycle.py  test_open_close_trade.py  test_open_only.py  test_telegram.py  test_trade_via_bridge.py  time_series_data.db-shm  time_series_data.db-wal
.github/workflows/: ci.yml
alpha_platform/: verify_platform.py
alpha_platform/alpha_research/: hypothesis.py
alpha_platform/api/: app.py  websocket_manager.py
alpha_platform/config/: logging_config.py  settings.py
alpha_platform/core/: base_strategy.py  telegram_notifier.py  types.py
alpha_platform/dashboard/: index.html  package-lock.json  package.json
alpha_platform/disaster_recovery/: state_manager.py
alpha_platform/execution_analytics/: execution_tracker.py
alpha_platform/execution_engine/: advanced_execution.py  mt5_bridge.py  order_reconciler.py
alpha_platform/feature_store/: cross_asset.py  market_features.py  session_features.py  store.py  time_series_db.py
alpha_platform/market_data/: microstructure.py  news_filter.py  quality_filter.py
alpha_platform/meta_labeling/: advanced_ai.py  calibration.py  model_trainer.py  purged_cv.py  triple_barrier.py
alpha_platform/model_governance/: registry.py
alpha_platform/paper_trading/: paper_runner.py
alpha_platform/risk_engine/: Cargo.toml  advanced_risk.py  python_binding.py  self_critic.py
alpha_platform/risk_engine/src/: drawdown.rs  lib.rs  limits.rs
(+35 files in other folders)
