[package]
name = "rust_risk_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_risk_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
python = ["pyo3"]
